# Ray-Tracer-Animation

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Application/: Application.cpp  Application.hpp
src/Cameras/: Camera.cpp  Camera.hpp  OrthoCamera.cpp  OrthoCamera.hpp
src/Lights/: PointLight.cpp  PointLight.hpp
src/Shaders/: Shader.cpp  Shader.hpp
src/Shaders/shaders/: border.vertex  light.fragment  lighting.fragment  lighting.vertex
src/Shape/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp
src/macros/: glad.c
